--- a/main.html
+++ b/main.html
@@ -11,6 +11,34 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+		</tr>
+		<tr>
+				<td>3</td>
+			<td>4</td>
+		</tr>
+	</table>
+
+	<h1>List of medias</h1>
+
+	<ol>
+		<li><img alt="hi" src="https://picsum.photos/id/123/200/300"></li>
+		<li><audio controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="audio/mpeg">
+		</audio></li>
+		<li>
+			<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			</audio>
+		</li>
+
 </body>
 
 </html>
