--- a/main.html
+++ b/main.html
@@ -12,10 +12,13 @@
 </script>
 
 	<table>
+		<thead>
 		<tr>
 			<th>Roll numbers</th>
 			<th>Names</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>1</td>
 			<td>2</td>
@@ -24,18 +27,19 @@
 				<td>3</td>
 			<td>4</td>
 		</tr>
+		</tbody>
 	</table>
 
 	<h1>List of medias</h1>
 
 	<ol>
 		<li><img alt="hi" src="https://picsum.photos/id/123/200/300"></li>
-		<li><audio controls>
-			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="audio/mpeg">
+		<li><audio src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="audio/mpeg" controls>
+		
 		</audio></li>
 		<li>
-			<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+		
 			</audio>
 		</li>
 
