--- a/main.html
+++ b/main.html
@@ -35,11 +35,11 @@
 	<ol>
 		<li><img alt="hi" src="https://picsum.photos/id/123/200/300"></li>
 		<li><audio src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="audio/mpeg" controls>
-		
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="audio/mpeg"/>
 		</audio></li>
 		<li>
 			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
-		
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" >
 			</audio>
 		</li>
 
